--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,8 @@ p {
 .uvah3 {
     width: 100%;
     text-align: center;
-    margin-top: 20px; /* Spazio sopra il titolo */
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
 /* Sezione NO-List, immagine a sinistra, paragrafo a destra con titolo sopra entrambi */
@@ -149,6 +150,7 @@ p {
     text-align: center; /* Il titolo rimane centrato sopra la sezione */
     margin-top: 40px;
     color: #d00707; 
+    margin-bottom: 40px;
 }
 
 .NO-List {
@@ -179,6 +181,7 @@ p {
     text-align: center; /* Il titolo rimane centrato sopra la sezione */
     margin-top: 40px;
     color: #210138; 
+    margin-bottom: 40px;
 }
 
 .Eco-Packaging {
@@ -209,6 +212,7 @@ p {
     text-align: center; /* Il titolo rimane centrato sopra la sezione */
     margin-top: 40px;
     color: #0a3b0a; 
+    margin-bottom: 40px;
 }
 
 .Ambiente .intro-ambiente,
@@ -268,6 +272,7 @@ p {
     text-align: center; 
     margin-top: 40px;
     color: #05095e; 
+    margin-bottom: 40px;
 }
 
 .Team {
@@ -389,6 +394,10 @@ footer p {
         align-items: center; /* Centra gli elementi */
         gap: 40px; /* Aggiungi un gap consistente quando impilati */
     }
+
+    .Eco-Packagingh3 {
+    margin-bottom: 0px;
+}
 
     .NO-List .image-container2,
     .NO-List .text-container2,
