--- a/styles.css
+++ b/styles.css
@@ -340,7 +340,7 @@ footer p {
         text-align: justify;
     }
 
-    .altri-impegni-ambiente p {
+    .altri-impegni-ambiente {
       text-align: justify;
     }
 }
@@ -463,7 +463,7 @@ footer p {
         text-align: justify;
     }
 
-    .altri-impegni-ambiente p {
+    .altri-impegni-ambiente {
       text-align: justify;
     }
 }
@@ -546,7 +546,7 @@ footer p {
         text-align: justify; 
     }
     
-    .altri-impegni-ambiente p {
+    .altri-impegni-ambiente {
       text-align: justify;
     }
 
@@ -582,7 +582,7 @@ footer p {
         text-align: justify;
     }
 
-    .altri-impegni-ambiente p {
+    .altri-impegni-ambiente {
       text-align: justify;
     }
 }
